hhp修改关于配置文件的一些问题并添加course接口的错误

--- a/pom.xml
+++ b/pom.xml
@@ -237,8 +237,12 @@
     </dependencyManagement>
 
     <build>
-        <plugins>
 
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
