--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SuiJiFront">
-        <activity android:name=".PicAddActivity"></activity>
+        <activity android:name=".ContentShowActivity"></activity>
+        <activity android:name=".PicAddActivity" />
+        <activity android:name=".TodoShowActivity" />
+        <activity android:name=".Edit2Activity" />
+        <activity android:name=".ReviseActivity" />
+        <activity android:name=".ShowActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" />
